# esbmc-ai-addon-template

./: .gitignore  README.md  config.toml  pyproject.toml
my_addon/: __about__.py  __init__.py
my_addon/commands/: __init__.py  my_addon.py
my_addon/verifiers/: __init__.py  my_verifier.py
